accent color change to gold

--- a/docs/assets/stylesheets/colors.css
+++ b/docs/assets/stylesheets/colors.css
@@ -1,5 +1,5 @@
 :root {
-    --iwscan-accent: #ff6f61;
+    --iwscan-accent: #ac882e;
     --iwscan-bg: #003a62;
 
     --md-default-bg-color: #0c0c0c;
